[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/General/Shadows/circle shadow small.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Rendering/DepthTestCharacterSprite.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Rendering/DepthTestFloorSprite.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Circus/Kaboom SS.png" type="Texture" id=4]
[ext_resource path="res://Enemies/BattleTrigger.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/EnemyPost.gd" type="Script" id=6]
[ext_resource path="res://Scripts/PostEnemyMotionRoot.gd" type="Script" id=7]
[ext_resource path="res://Areas/Cherry Trail/Cherry Trail BA 1.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=2]
radius = 8.94814

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodyVisualRoot/Enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyVisualRoot/Enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[node name="Kaboom_post" type="YSort"]
script = ExtResource( 6 )
ground_enemy = true
target_scene = ExtResource( 10 )
alt_scene = ExtResource( 10 )

[node name="MotionRoot" type="KinematicBody2D" parent="."]
position = Vector2( 0, 1 )
collision_layer = 3
collision_mask = 6
collision/safe_margin = 0.5
script = ExtResource( 7 )
spawn_z = 40

[node name="BattleTrigger" parent="MotionRoot" instance=ExtResource( 5 )]
position = Vector2( 56, 44 )
scale = Vector2( 1.41177, 1.32223 )
collision_layer = 3
collision_mask = 6
height = 40.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="MotionRoot/BattleTrigger"]
visible = false
position = Vector2( -38.2499, -49.1594 )
scale = Vector2( 1.47669, -1.34829 )
shape = SubResource( 2 )

[node name="BodyYSort" type="Node2D" parent="MotionRoot"]
position = Vector2( 0, -1 )

[node name="BodyVisualRoot" type="Node2D" parent="MotionRoot/BodyYSort"]

[node name="ShadowCircle" type="Sprite" parent="MotionRoot/BodyYSort/BodyVisualRoot"]
modulate = Color( 1, 1, 1, 0.75 )
position = Vector2( 1, -6 )
scale = Vector2( 1.21018, 1.03542 )
texture = ExtResource( 1 )
script = ExtResource( 3 )
alpha_clip = 0.01
always_update = true
height = 40.0
use_dithering = false
use_dither_blending = false
use_transparency = true

[node name="Enemy" type="Sprite" parent="MotionRoot/BodyYSort/BodyVisualRoot"]
modulate = Color( 0.972549, 0.988235, 1, 1 )
position = Vector2( -9, -26 )
scale = Vector2( 1.4, 1.35 )
texture = ExtResource( 4 )
hframes = 3
vframes = 3
frame = 2
script = ExtResource( 2 )
depth_test_offset = Vector2( -8, 28 )
feet_height = 10.0
height = 40.0
use_dithering = false
use_dither_blending = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MotionRoot"]
visible = false
position = Vector2( 1, -21 )
scale = Vector2( 1.92485, 1.77354 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MotionRoot"]
root_node = NodePath("../BodyYSort")
autoplay = "idle"
playback_speed = 0.5
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 5 )

[connection signal="triggered" from="MotionRoot/BattleTrigger" to="." method="_on_BattleTrigger_triggered"]
